# dnp3py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  noxfile.py  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
data/profiles/: demo.json  full.json  minimal_1547.json  profile_schema.json
data/template/: profile.json
docs/: control-commands.md  mesa-outstation.md
src/dnp3/: __init__.py
src/dnp3/application/: builder.py  parser.py  qualifiers.py
src/dnp3/core/: flags.py  timestamp.py
src/dnp3/database/: database.py  event_buffer.py
src/dnp3/datalink/: parser.py
src/dnp3/master/: commands.py  master.py
src/dnp3/mesa/: __init__.py  __main__.py  ao_store.py  command_handler.py  database_builder.py  entities.py  outstation.py  profile.py  scaling.py
src/dnp3/mesa/data/profiles/: mandatory_1547.json  mandatory_1815.json
src/dnp3/objects/: analog_input.py  binary_input.py  counter.py  registry.py
src/dnp3/outstation/: __init__.py  outstation.py  state.py  tcp_runner.py
src/dnp3/transport/: segment.py
src/dnp3/transport_io/: simulator.py  tcp_client.py  tcp_server.py
tests/: conftest.py
tests/cross_repo/: __init__.py  test_mesa_tool_integration.py
tests/integration/: test_commands.py  test_mesa_outstation.py  test_mesa_tcp_e2e.py  test_outstation_master.py  test_polling.py  test_tcp_outstation_e2e.py  test_tcp_server.py  test_unsolicited.py
tests/unit/: test_coverage_gaps.py  test_version.py
tests/unit/application/: test_builder.py  test_header.py  test_qualifiers.py
tests/unit/core/: test_timestamp.py
tests/unit/database/: test_database.py  test_event_buffer.py  test_sparse_high_index.py
tests/unit/master/: test_commands.py  test_master.py  test_polling.py
tests/unit/mesa/: test_ao_store.py  test_command_handler.py  test_database_builder.py  test_entities.py  test_main.py  test_outstation.py  test_profile.py  test_scaling.py
tests/unit/mesa/fixtures/: test_profile.json
tests/unit/objects/: test_analog_input.py  test_binary_input.py  test_binary_output.py  test_counter.py  test_registry.py
tests/unit/outstation/: test_direct_operate_response_format.py  test_multi_fragment.py  test_outstation.py  test_state.py  test_tcp_runner.py
tests/unit/transport/: test_segment.py
tests/unit/transport_io/: test_tcp_client.py
