[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dnp3py"
dynamic = ["version"]
description = "Pure Python DNP3 implementation (IEEE 1815-2012)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Typing :: Typed",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/dnp3"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "PLR",    # pylint refactor
    "PLW",    # pylint warnings
    "RUF",    # ruff-specific
]
ignore = [
    "PLR0911",  # too many return statements (expected for protocol handlers)
    "PLR0912",  # too many branches (expected for protocol handlers)
    "PLR0913",  # too many arguments (we need this for configs)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # magic values OK in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", ".pixi", ".venv"]
skips = []

[tool.coverage.run]
source = ["src/dnp3"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@abstractmethod",
]
fail_under = 95
show_missing = true

# python-semantic-release: tag-authoritative, no source-file version rewriting.
# PSR computes the semver bump from conventional commits, writes CHANGELOG.md,
# creates the GitHub release, and pushes the tag. hatch-vcs then derives the
# version from the tag at build time. We do NOT set version_variables so PSR
# never rewrites a source constant.
[tool.semantic_release]
version_toml = []
version_variables = []
tag_format = "v{version}"
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "python -m build"
dist_path = "dist/"
upload_to_pypi = true
upload_to_release = true
commit_version_number = false
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = false

[tool.semantic_release.changelog]
changelog_sections = [
    {type = "feat", section = "Added"},
    {type = "fix", section = "Fixed"},
    {type = "perf", section = "Changed"},
    {type = "refactor", section = "Changed"},
    {type = "docs", section = "Changed"},
]
