[build-system]
# hatch-vcs must be in build-system.requires (not just a dev dependency) because
# hatchling resolves the dynamic version during the isolated build step before
# any project dependencies are installed. Without it here, `python -m build`
# fails with "unknown version source 'vcs'" in the isolated build environment.
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dnp3py"
dynamic = ["version"]
description = "Pure Python DNP3 implementation (IEEE 1815-2012)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Typing :: Typed",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/dnp3"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = "dnp3.outstation.tcp_runner"
# Pre-existing type errors in tcp_runner.py surfaced by mypy 1.14 strict mode.
# Tracked as a hardening item outside the MESA module scope (DNP-016).
# Scoped per error code instead of ignore_errors so any new errors are visible.
disable_error_code = ["type-arg", "assignment", "arg-type"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "PLR",    # pylint refactor
    "PLW",    # pylint warnings
    "RUF",    # ruff-specific
]
ignore = [
    "PLR0911",  # too many return statements (expected for protocol handlers)
    "PLR0912",  # too many branches (expected for protocol handlers)
    "PLR0913",  # too many arguments (we need this for configs)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # magic values OK in tests
# tcp_runner.py carries pre-existing style debt (SIM105 try/except/pass teardowns,
# PLR0915 large handler method, PLR2004 magic literal) tracked under DNP-016.
# Suppress here rather than restructuring out of PR-B scope.
"src/dnp3/outstation/tcp_runner.py" = ["SIM105", "PLR0915", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", ".pixi", ".venv"]
skips = []

[tool.coverage.run]
source = ["src/dnp3"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@abstractmethod",
]
fail_under = 95
show_missing = true

# python-semantic-release: tag-authoritative, no source-file version rewriting.
# PSR computes the semver bump from conventional commits, writes CHANGELOG.md,
# creates the GitHub release, and pushes the tag. hatch-vcs then derives the
# version from the tag at build time. We do NOT set version_variables so PSR
# never rewrites a source constant.
#
# upload_to_pypi = false: PyPI publication is handled solely by the dedicated
# OIDC trusted-publisher job in release.yml. Enabling PSR's own PyPI upload
# would create a double-publish path and PSR has no OIDC credentials, making
# it either a hard failure or a non-OIDC route that defeats trusted-publisher.
#
# build_command = "": PSR must NOT re-build the distribution. The canary
# smoke-tested wheel uploaded by the build job is the artifact that reaches
# PyPI. A PSR re-build would shadow the validated artifact with an unverified one.
#
# commit_version_number = false: hatch-vcs derives the version from the git
# tag at build time, so no version constant lives in source. A PSR version
# commit would add a meaningless bump commit with nothing to change.
#
# branch = "main": PSR runs on main and pushes the tag back to main. This is
# safe because commit_version_number = false means PSR never pushes a bump
# commit, only the annotated tag itself.
[tool.semantic_release]
version_toml = []
version_variables = []
tag_format = "v{version}"
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = ""
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = true
commit_version_number = false
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.changelog]
changelog_sections = [
    {type = "feat", section = "Added"},
    {type = "fix", section = "Fixed"},
    {type = "perf", section = "Changed"},
    {type = "refactor", section = "Changed"},
    {type = "docs", section = "Changed"},
]
